Adicionando site institucional

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <section>
     <h2>Contato</h2>
-    <p>Email: fabio.seuemail@email.com</p>
+    <p>Email: fabiocoelhode59@email.com</p>
     <p>GitHub: <a href="https://github.com/fabiosoftware" target="_blank">github.com/fabiosoftware</a></p>
     <p>LinkedIn: <a href="#" target="_blank">[Seu perfil LinkedIn]</a></p>
   </section>
